fix width to prevent deposit/withdraw rate from wrapping

--- a/src/components/SwapPage.scss
+++ b/src/components/SwapPage.scss
@@ -50,7 +50,7 @@ div.swapPage {
   }
 
   .priceTable {
-    width: 30%;
+    width: 40%;
     margin-right: auto;
     text-align: left;
     color: var(--text);
